--- a/platformio.ini
+++ b/platformio.ini
@@ -19,11 +19,16 @@ build_flags =
 lib_deps =
   ArduinoJson
   IRremoteESP8266
-  RemoteDebug
+  https://github.com/achuchev/RemoteDebug
   https://github.com/achuchev/SmartHome-MqttClient
   https://github.com/achuchev/SmartHome-ESPWifiClient
   https://github.com/achuchev/SmartHome-FOTAClient
   https://github.com/exstan/pubsubclient.git
   https://github.com/exstan/smart-home-remote-print.git
-;upload_port = ***.***.***.***
-;upload_flags = --port=**** --auth ****
+
+;upload_port = /dev/cu.usbserial-0001
+;upload_protocol = esptool
+upload_port = 192.168.1.127
+upload_flags =
+    --auth=***
+upload_protocol = espota
